parser for new dataset (round 6)
fix the issues about buffer: 1) one node may be input to multiple bufs, so it can have multiple nicknames; 2) when a PO node is the output of a buf, then we should dupliate a node.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,24 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+
+#idea
+.idea/
+.DS_Store
+
+#backup
+src_bk/
+*bk*
+
+# test
+tt.py
+merge_data.py
+delay_prop.py
+delay_statistic.py
+collect_data.py
+verilog_parser.py
+train_kfold.py
+
 # data
 rawdata/
 
